[project]
name = "alpine"
version = "1.0"
description = "Another Discord bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogtts>=1.1.1",
    "asyncakinator>=1.7",
    "asyncdagpi>=4.1.5",
    "asyncgist",
    "asyncpg>=0.30.0",
    "discord-ext-menus",
    "discord-py>=2.6.3",
    "doc-search>=1.0.7",
    "humanize>=4.13.0",
    "jishaku>=2.6.0",
    "mystbin-py>=7.1.1",
    "psutil>=7.0.0",
    "pytz>=2025.2",
    "somerandomapi-py>=0.1.1",
    "tag-formatter>=1.3.11",
    "toml>=0.10.2",
    "topggpy>=1.4.0",
    "wavelink>=3.4.1",
]

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
line_length = 125
force_alphabetical_sort_within_sections = true
combine_as_imports = true

[tool.pyright]
typeCheckingMode = "standard"
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportFunctionMemberAccess = false

[tool.ruff]
exclude = [".env"]
line-length = 125
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC", "C4", "E", "F", "FA", "ISC", "N", "PERF", "PIE", "PL", "RET", "RUF", "SIM", "T20", "TID", "TRY"]
ignore = [
    "F403",
    "F405",
    "N804",  # pylance already does it
    "PLC0414",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "SIM105",
    "TRY003",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.uv.sources]
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }
asyncgist = { git = "https://github.com/avizum/asyncgist" }
